mapsed.css
/*
 * Core styles (you always need these)
*/
	.mapsed-container {
		width: 100%;
		min-width: 200px;
		max-width: 350px;
		font-family: "Calibri", "Arial";
		color: #000;
		/* Fixes problem with scrollbars appearing the first time a tooltip is used on a marker */
		line-height: 1; 
	}
	
	.mapsed-address-entry { 
		/* edit dialog needs to be a bit bigger */
		min-width: 300px;
	}
	
	.mapsed-container {
		width: 95%;
		margin: 3px;
	}

/*
 * ToolTip styles (you probably always need these)
*/
	.mapsed-container h1, .mapsed-help h3 {
		font-family: Calibri, Arial;
		font-size: medium;
		background-color: #eee;
		color: #333;
		border-radius: 5px;
		padding-left: 5px;
	}
	.mapsed-container h1 {
		margin-top: 0px;
		margin-bottom: 10px;
	}
	.mapsed-view h1 {
		cursor: help;
	}


.mapsed-toolbar-container {
	display: flex;
	flex-direction: column;

	margin-left: 0.5rem;
}
.mapsed-searchbar-container {
	margin-left: 0.5rem;
	margin-top: 0.5rem;
}

/* container for address details, phone, etc */

		.mapsed-left address {
			font-size: small;
			margin-bottom: 10px;
		}
		
		.mapsed-left a {
			font-size: small;
			color: #428bca;
		}
		.mapsed-left a:hover, .mapsed-left a:focus {
			color: #2a6496;
			text-decoration: underline;
		}

	.mapsed-photo {
		/* Give a bit of space between the elements */
		padding-left: 10px !important;
	}
	.mapsed-photo, .mapsed-add-info {
		/* where the photo and additional info appears */
		margin: 0;
		padding: 0;
		vertical-align: top;
	}
	
	.mapsed-photo img {
		/* In case there's a "select" button underneath the photo image*/
		margin-bottom: 10px;	
		float: right;		
	}
	
	.mapsed-add-info {
		/* Give a bit of space between the elements */
		padding-left: 10px;
		white-space: nowrap;
	}
	
	/* container for address data entry */
	.mapsed-address-entry {			
	}
		.mapsed-address-entry ul {
			list-style-type: none;	
			margin: 0 5px 0 5px;
			padding: 0;
		}
		.mapsed-address-entry ul li {
			margin: 5px 0px;
		}
		.mapsed-address-entry .mapsed-save-button {
		}
		.mapsed-address-entry label {
			width: 100%;
			display: inline-block;
			float: left;
		}
		
		.mapsed-address-entry label input {
			display: inline-block;
			width: 70%;	
			float: right;
			color: #333;
			background-color: #fff;
			border: solid 1px #ddd;
			border-radius: 2px;
		}
		.mapsed-address-entry label, .mapsed-address-entry label input {
			/* force vertical alignment */
			height: 20px;
			line-height: 20px;
			margin-bottom: 5px;
		}

	.mapsed-view {
		/* Ensures stuff doesn't wrap around, which looks horrible when it does */
		white-space: nowrap;
	}
	.mapsed-view .mapsed-website, .mapsed-view .mapsed-url {
		
	}

		
/*
* Search styles (see "showSearch" property)
*/
	input.mapsed-searchbox {
		background-color: #fff;
		padding: 0 11px 0 13px;
		width: 50%;
		font-family: "Calibri", "Arial";
		font-size: 15px;
		font-weight: 300;
		text-overflow: ellipsis;

		height: 40px;
		border: 1px solid #fff;
		outline: none;
		border-radius: 2px 0 0 2px;
		box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);		
		box-sizing: border-box;
		-moz-box-sizing: border-box;
	}
	input.mapsed-searchbox:focus {
		border-color: #4d90fe;
		background-color: #fff;
	}		

	
/*
* Select styles, see "showSelect" property.
*/
	.mapsed-select-container {
		clear: both;
	}
	button.mapsed-select-button {

	}


/*
* Custom map control styles
*/
.mapsed-control-button {

	border-color: rgba(0, 0, 0, 0.14902);
	border: solid 1px #888;
	border-radius: 2px;
	background-color: #fff;
	box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
	-webkit-box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
	padding: 3px 6px;
	font-family: Calibri, Arial;
	font-size: 16px;
	color: #000;
	font-family: Roboto;
	text-decoration: none;
	font-weight: 400;
	line-height: 12px;
		
	margin-right: 3px;
	cursor: pointer;
}

.gm-style-mtc > div {
	/* Map/Satellite */
	font-size: 12px !important;
	padding: 3px 6px !important;
}


:hover.mapsed-control-button {
	background-color: #ddd;
}

/*
	Dialog styles
*/
.mapsed-buttons td:first-child {
	padding-top: 10px;
	/* we did play with putting these on the right, but the mobile view doesn't show them .... sometimes! */
}

button.mapsed-select-button, 
button.mapsed-edit-button, 
button.mapsed-save-button, 
button.mapsed-delete-button, 
button.mapsed-search-button, button.mapsed-more-button {
	color: #fff;

	padding: 5px 7px;

	font-weight: bold;

	background-image: -webkit-linear-gradient(top,#4d90fe,#4787ed);
	background-color: #4d90fe;
	border: none;
	border-radius: 2px;
	box-shadow: 0 2px 6px rgba(0,0,0,0.3);
	cursor: pointer;
}
.mapsed-error {
	color: #880000;
	margin-left: 10px;
}

button.mapsed-search-button, button.mapsed-more-button {
	/* search button is a little bit different to the other button controls */
	padding: 11px 20px;
	font-size: 15px;
	line-height: 1.3;
}
button.mapsed-more-button[disabled] {
	background-image: -webkit-linear-gradient(top,#f5f9ff,#e9e9e9);
	background-color: #d8d8d8;
	color: silver;
	cursor: auto;	/*so it doesn't look clickable*/
}
button.mapsed-geo-button {
	color: #B60000;
	cursor: pointer;
}
button.mapsed-geo-button.is-active {
	color: #0024B6;
	font-weight: 300;
}
button.mapsed-select-button, 
button.mapsed-edit-button, 
button.mapsed-save-button, 
button.mapsed-delete-button {
	margin-right: 2px;
}

/*
* Full window styles (just for making the generated div overlay)
*/
	.mapsed-full-window {
		position: fixed !important;
		top: 0; bottom: 0;
		left: 0; right: 0;
		/* Google places predictive results are on z-index 1000, so 1 below so they can appear */
		z-index: 999;
	}
	
/*
* Help dialog styles
*/
	.mapsed-help {
		margin: 0;
		padding: 5px;
		background: #fff;
		border: solid 1px #ddd;
		border-radius: 2px;
		box-shadow: 2px 2px 2px #aaa;
		min-width: 250px;
		color: #000;
		cursor: pointer;
	}
	.mapsed-help {
		position: absolute;
		z-index: 999;
		top: 20%;
		left: 20%;
		width: 60%;
	}

	.mapsed-help  h3 {
		margin: 0;
	}
	
	.mapsed-help ol {
		padding-left: 25px;
	}
	.mapsed-help ol li, .mapsed-help ul li {
		color: #000;
		background-color: #fff;
		margin: initial;
		font-size: small;
	}
	.mapsed-help ol li {
		list-style-type: decimal;
	}
	.mapsed-help ul li {
		list-style-type: disc;
	}
	.mapsed-help-button.open {
		background-color: #ccc;
	}
	
	/* modal message support */
	.mapsed-modal {
		position: absolute;
		top: 20%;
		left: 20%;
		width: 60%;
		z-index: 2000;
		height: auto;
		font-family: "Calibri", "Arial";
		display: none;
		background: #e74c3c;
		border-radius: 5px;
		color: #fff;
	}
		.mapsed-modal {
		}
			.mapsed-modal > div {
				margin: 10px;
			}
			.mapsed-modal h3 {
				text-align: center;
				padding: 10px;
				margin: 0;
				background-color: #BD4236;
				font-weight: 300;
				font-size: x-large;
				opacity: 0.8;
				border-radius: 5px 5px 0 0;
			}			
			.mapsed-modal-message {			
			}
			.mapsed-modal-button-bar {
				margin-top: 20px;
			}
			.mapsed-modal-button-bar::after {
				clear: both;
				content: " ";
			}
				.mapsed-modal-button-bar .prompt {
					float: left;
					margin: 0;
				}	
				.mapsed-modal-buttons {
					display: block;
					float: right;
					margin-bottom: 20px;
				}
					.mapsed-modal button {
						padding: 5px 10px;
						background: #c0392b;
						border: none;
						color: #fff;
						letter-spacing: 1px;
						text-transform: uppercase;
						border-radius: 2px;
						cursor: pointer;
						opacity: 1;
					}
					.mapsed-modal button:hover {
						background-color: #A5281B;
					}

/* button positions - important is required as it gets overridden by Google Maps API */
input.mapsed-searchbox, button.mapsed-search-button, button.mapsed-more-button {
	top: 10px !important; 
}
button.mapsed-geo-button {
	
}
input.mapsed-searchbox {
	left: 190px !important;
	width: 440px !important;
}
button.mapsed-search-button {
	left: 640px !important;
}
button.mapsed-more-button {
	left: 710px !important;
}
.mapsed-control-button {
	top: 5px !important;
}


	/* mobile overrides */
	@media 
		/* Smartphones (portrait) ----------- */
		only screen 
		and (min-device-width : 320px)
		and (max-device-width : 480px) {

		td.mapsed-photo {
			/*
				Photo takes up too much room on mobile version
				Better for the content to be more readable.
			*/
			display: none !important;
		}

		.gm-style-mtc > div {
			font-size: 22px !important;
			padding: 10px 5px !important;
			top: 1px !important;
		}

		.mapsed-control-button {
			/* slightly bigger for our buttons over the google Map/Satellite */
			padding: 7px 18px !important;
			font-size: 30px;
			top: 1px !important;
		}
		button.mapsed-geo-button {
			/* GEO is a little bit different - purely because of the content icon */
			font-size: 30px !important;
			padding: 7px 13px !important;
		}


	
		input.mapsed-searchbox, button.mapsed-search-button, button.mapsed-more-button {
			height: 50px;
			font-size: 20px !important;
		}
		.input.mapsed-searchbox {
			padding: 0px 12px !important;			
		}
		button.mapsed-search-button {
			padding: 0px 10px !important;			
		}
		button.mapsed-more-button {
			padding: 0px 10px !important;			
		}

	
		/* positions */
		#themePicker, button.mapsed-add-button, button.mapsed-help-button, button.mapsed-add-button, button.mapsed-close-button, button.mapsed-geo-button {
			top: 6px !important;
		}
		input.mapsed-searchbox, button.mapsed-search-button, button.mapsed-more-button {
			top: 57px !important; 
		}
		input.mapsed-searchbox {
			left: 33px !important;
			width: 229px !important;
		}
		button.mapsed-search-button {
			left: 265px !important;
		}
		button.mapsed-more-button {
			left: 311px !important;
		}
		#themePicker, button.mapsed-add-button, button.mapsed-help-button, button.mapsed-add-button, button.mapsed-close-button, button.mapsed-geo-button {
		}

		.mapsed-help {
			top: 20%;
			left: 15%;
			width: 70%;
		}

		.mapsed-help li {
			margin-left: 1% !important;
		}
		.mapsed-help p, .mapsed-help li {
			font-size: 15px !important;
			line-height: 1.2;
		}
		.mapsed-help h3 {
			font-size: 20px !important;
		}

		.mapsed-modal {
			top: 20%;
			left: 15%;
			width: 70%;
		}

	}

